--- a/src/pages/FloorPlanPage.module.css
+++ b/src/pages/FloorPlanPage.module.css
@@ -9,6 +9,7 @@
   flex: 7;
   min-height: 0;
   position: relative;
+  overflow: hidden;
 }
 
 .panelRegion {
